--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="head"><h1>STONE PAPER SCISSOR GAME</h1></div>
     <h2 class="status">Choose any!</h2>
-    <h2 class="score"><span class="user">0</span>-<span class="comp">0</span></h2>
+    <h2 class="score">YOU <span class="user">0</span>-<span class="comp">0</span> COMPUTER</h2>
     <div class="container">
       <div class="game">
         <div class="button">
