--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>S_P_S-Game</title>
+    <title>SPC-Game</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <div></div>
@@ -37,6 +37,7 @@
       </div>
     </div>
     <button>Reset</button>
+    <footer>Made by Shibam & Loveneesh </footer>
     <script src="./script.js"></script>
   </body>
 </html>
